--- a/games/index.html
+++ b/games/index.html
@@ -5,204 +5,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-            margin-top: 50px;
-        }
-
-        .game-info {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            align-items: center;
-            margin-top: 20px;
-        }
-
-        button {
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-        }
-
-        .result {
-            margin-top: 20px;
-            font-size: 24px;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 20px;
-        }
-
-        .choices {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            overflow: hidden;
-            cursor: pointer;
-        }
-
-        .choices img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-
-        }
-
-
-        .choices img:hover {
-            opacity: 0.6;
-            scale: 1.2;
-            transition: all 0.5s;
-
-        }
-
-        .flex {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-        }
-
-        .choose {
-            margin: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 30px;
-        }
-
-        #msg {
-            /* font-size: 24px; */
-            font-weight: bold;
-            padding: 15px 30px;
-            background-color: black;
-            color: #fff;
-            border: none;
-            outline: none;
-            cursor: pointer;
-            border-radius: 12px;
-        }
-
-        .box,
-        #computer-choice-img {
-            width: 100px;
-            height: 100px;
-            overflow: hidden;
-            border: 1px solid black;
-            border-radius: 12px;
-        }
-
-        .box img,
-        #computer-choice-img img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .timer {
-            background-color: green;
-            color: #fff;
-            width: 100px;
-            border-radius: 10px;
-            padding: 10px 25px;
-            margin: 50px auto;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            text-transform: capitalize;
-        }
-
-        .rest-btn {
-            background-color: #1927eb;
-            color: #fff;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 12px;
-            cursor: pointer;
-        }
-
-        .res-box {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-            margin-top: 20px
-        }
-
-        .rest-btn {
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1 id="heading">Rock Paper Scissors</h1>
-    <div class="game-box">
-        <div class="timer">
-            <p id="time">60</p>
-        </div>
-        <div class="res-box">
-            <!-- User Choice -->
-            <div class="flex">
-                <p>User Choice</p>
-                <div class="box">
-                    <img id="user-choice-img"
-                        src="https://img.freepik.com/free-photo/welcome-phrase-available-launch-open_53876-124476.jpg?semt=ais_hybrid"
-                        alt="User Choice">
-                </div>
-
-            </div>
-
-            <!-- Computer Choice -->
-            <div class="flex">
-                <p>Computer Choice:</p>
-                <div id="computer-choice-img">
-                    <img id="computer-img"
-                        src="https://img.freepik.com/free-photo/welcome-phrase-available-launch-open_53876-124476.jpg?semt=ais_hybrid"
-                        alt="Computer Choice">
-                </div>
-            </div>
-
-        </div>
+    <div class="container">
+        <p>User Name : <span id="user"></span></p>
+        <h1>Rock Paper Scissors</h1>
         <div class="game-info">
+            <div class="timer">Time Left: <span id="time">60</span> sec</div>
 
-            <div class="choices" id="rock">
-                <img id="joni" src="./rock.png" alt="">
+            <div class="res-box">
+                <!-- User Choice -->
+                <div class="choice-container">
+                    <p class="choice-title">User Choice</p>
+                    <div class="image-box">
+                        <img id="user-choice-img" src="https://www.svgrepo.com/show/192244/man-user.svg"
+                            alt="User Choice">
+                    </div>
+                </div>
+
+                <!-- Computer Choice -->
+                <div class="choice-container">
+                    <p class="choice-title">Computer Choice</p>
+                    <div class="image-box">
+                        <img id="computer-img"
+                            src="https://img.freepik.com/free-vector/robot-skull-mascot-logo_32991-756.jpg?t=st=1738409546~exp=1738413146~hmac=c2e4cc902f446f0a0388fc3dadde3438b0b7f1811cbfc85cb2a1aa9b6b6ff166&w=900"
+                            alt="Computer Choice">
+                    </div>
+                </div>
             </div>
 
-            <div class="  choices" id="paper">
-                <img src="./paper.png" alt="">
+            <div class="choices">
+                <div class="choice" id="rock">
+                    <img src="rock.png" alt="">
+                </div>
+                <div class="choice" id="paper">
+                    <img src="paper.png" alt="">
+                </div>
+                <div class="choice" id="scissors">
+                    <img src="scissors.png" alt="">
+                </div>
             </div>
-            <div class=" choices" id="scissors">
-                <img src="./scissors.png" alt="">
+            <div class="scoreboard">
+                <div class="score">
+                    <h2>You</h2>
+                    <p class="users-score">0</p>
+                </div>
+                <div class="score">
+                    <h2>Com</h2>
+                    <p class="com-score">0</p>
+                </div>
+            </div>
+            <div class="result">
+                <p id="msg">Make your move!</p>
             </div>
 
         </div>
-        <div class="result">
-            <div class="users">
-                <div class="users-score">0</div>
-                <p>You</p>
-            </div>
-            <div class="Computer">
-                <div class="com-score">0</div>
-                <p>Computer</p>
-            </div>
+        <div class="d-flex">
+            <button class="play-again">Play Now</button>
+            <button id="rest-btn" onclick="resestGame()">Reset Game</button>
         </div>
+
     </div>
-
-    <button id="msg">Play Now</button>
-    <button class="rest-btn">Reset Game</button>
-
-
-
-
     <script src="game.js"></script>
 </body>
 
